fix: fixed logo visibility in header

--- a/src/Header.sass
+++ b/src/Header.sass
@@ -1,19 +1,37 @@
 .Header
   &__badw-logo
-    height: 2.4em
+    height: 1.1em
+    width: auto
+    display: block
 
   &__lmu-logo
-    height: 2.4em
+    height: 2.3em
+    width: auto
     margin-bottom: 0
+    display: block
 
   &__logo-container
     display: flex
     flex-direction: row
     align-items: center
-    gap: 0.5em
+    gap: 0.9em
     text-align: center
-    min-width: 150px
-    height: 3em
+    min-width: 200px
+    height: auto
+    line-height: 1
+    padding: 0 0.25em
+    background-color: transparent
+
+  &__logo-container a
+    display: flex
+    align-items: center
+
+  &__logo-container a + a
+    border-left: 1px solid #dadada
+    padding-left: 0.75em
+
+  &__logo-brand
+    margin-left: 0.5rem
 
   &__title
     font-size: 1em
@@ -46,7 +64,25 @@
   width: 100%
 
 #menu-lines
-  padding: 0 40px
+  padding: 0 24px
+
+.Header__nav
+  display: flex
+  flex-direction: row
+  align-items: center
+  justify-content: center
+  gap: 1rem
+
+.Header__nav-row
+  display: flex
+  flex-wrap: nowrap
+  justify-content: center
+  column-gap: 0.4rem
+  row-gap: 0.2rem
+
+.Header__nav-row .nav-link
+  padding: 0.25rem 0.6rem
+  font-size: 0.95em
 
 .Header__info-banner
   padding-left: 0
